# lamda

./: .gitignore  pyproject.toml
calc/: m_h_rot.py  m_rot.py
src/: main.py
src/animation/: Animacion.py  Animation.py  CentroMasa.py
src/cmass/: CenterMass.py
src/config/: config_general.toml
src/controller/: KeysController.py  PS4Controller.py
src/crawl/: CrawlController.py  RobotController.py  WalkController.py  crawl.py
src/gravity/: Gravity.py
src/kinematics/: forward_kinematics.py  inverse_kinematics.py  kinematics.py
src/motion/: CrawlController.py  GaitController.py  Move.py  RobotController.py  Spot.py  StateCommand.py  UpdateMovement.py  WalkController.py  state_time.py
src/utils/: config.py  stance.py  transformations.py
test/: cinematica_inversa.py  ma.py  prueba.py
utils/: cubo.py
