[project]
name = "ProjectLambda"
version = "1.0.0"
description = "Robot Quadrupedo"
authors = [
    {name = "albortas",email = "garlad628@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy (>=2.2.4,<3.0.0)",
    "pygame (>=2.6.1,<3.0.0)",
    "pytest (>=8.3.5,<9.0.0)",
    "jmespath (>=1.0.1,<2.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "pyquaternion (>=0.9.9,<0.10.0)",
    "pyqt5 (>=5.15.11,<6.0.0)",
    "toml (>=0.10.2,<0.11.0)"
]
[tool.poetry]
packages = [
    {include = "src"}
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
